--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
     <title>{{ site.title }}</title>
     {% include head.html %}
   </head>
-<body class="bg-grey" gtools_scp_screen_capture_injected="true"><div id="MathJax_Message" style="display: none;"></div>
+<body class="bg-cyangreen" gtools_scp_screen_capture_injected="true"><div id="MathJax_Message" style="display: none;"></div>
 <header id="header" class="header bg-white">
     <div class="navbar-container">
       <a href="/?liberxue" title="访问 {{  site.title }}" class="navbar-logo"> <img src="{{ site.url }}/style/images/logo-liberxue.png" alt="{{ site.title }}"> </a>
