--- a/style/style-liberxue.css
+++ b/style/style-liberxue.css
@@ -94,6 +94,7 @@ input:-ms-input-placeholder,textarea:-ms-input-placeholder{color:#5f5f5f;}
 .bg-yellow{background-color:#f9bb3c!important;}
 .bg-red{background-color:#e8583d!important;}
 .bg-orange{background-color:#f68e5f!important;}
+.bg-cyangreen{background-color:#bbdad1!important;}
 .MathJax_Display{overflow-x:auto;overflow-y:hidden;}
 .MathJax{outline:0;}
 .MathJax span{font-size:15px;}
